# yolov10-ncnn

./: CMakeLists.txt  README.md
include/: yolov10.h
models/: yolov10n.param
src/: main.cpp  yolov10.cpp
